#41: InviteEvent Controller (#67)
* #41: InviteEvent Controller

* #41: InviteEvent Controller

* #41: InviteEvent Controller

* #41: InviteEvent Controller
