# Documentation/apiDoc.yaml
@@ -198,6 +198,25 @@ paths:
           description: "Invalid Parameter: eventId, accountId cannot be null or empty, accountId need be the starterId"
         "404":
           description: "Not Found: target eventId or accountId not found in database"
+  inviteEvent:
+    post:
+      operationId: inviteEvent
+      tags:
+        - Events
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '../Backend/schema/src/yaml/requests/InviteEventRequest.yaml'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '../Backend/schema/src/yaml/responses/InviteEventResponse.yaml'
+        "400":
+          description: "Invalid Parameter: senderId, receiverId and event cannot be null or empty, senderId need equal to starterId"
+        "404":
+          description: "Not Found: target senderId or receiverId not found in database"
 # Group
   createGroup:
     post:
